# Clients_Servers_Apps

./: ReadMe.txt
Test_task/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.ninja  cmake_install.cmake
Test_task/Test_task/: CMakeLists.txt  Test_task.h  cmake_install.cmake  server.cpp
client/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
client/client/: CMakeLists.txt  client.cpp  client.h  cmake_install.cmake
